--- a/CrashCourseEndAssignment/PetShop2018.Infrastructure.Data/PetShop2018.Infrastructure.Data.csproj
+++ b/CrashCourseEndAssignment/PetShop2018.Infrastructure.Data/PetShop2018.Infrastructure.Data.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PetShop2018.Core\PetShop2018.Core.csproj" />
   </ItemGroup>
 
